2010-03-30  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (exec_omp_get): Add NULL guard for duration.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (get_schedules_omp, create_schedule_omp)
	(delete_schedule_omp): Add TIME to GET_SCHEDULES.

	* src/html/src/omp.xsl (opt): New template.
	(html-create-schedule-form): Create first time input via "opt" so that
	currect time is selected.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (edit_task): New function.  Body from edit_task_omp.  Add
	extra_xml arg.
	(edit_task_omp): Call through to edit_task.
	(save_task_omp): For comment or name error, put up the parameter error
	message on the edit_task page.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-edit-task-form): Make escalator editable.

	* src/gsad.c (init_validator): Add rule "escalator_id".
	(exec_omp_get): Pass escalator to save_task_omp.

	* src/gsad_omp.h: Update header accordingly.

	* src/gsad_omp.c (save_task_omp): Add schedule_id arg.  Include in
	MODIFY_TASK command.

2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-create-schedule-form): Remove minute units
	from period and duration.
	(html-edit-task-form): Add "(immutable)" to target and config input names.

2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.c (edit_task_omp): Add next and refresh_interval NULL
	checks.
	(save_task_omp): Remove refresh_interval NULL enforcement.

2010-03-28  Matthew Mundell <matthew.mundell@intevation.de>

	Add basic task editing.

	* src/html/src/gsad.xsl (autorefresh [html-header-meta]): Only add header
	if interval is above 0.

	* src/html/src/omp.xsl (html-task-table): Widen actions column.
	(html-edit-task-form, edit_task, modify_task_response): New templates.
	(task): Add edit task button.

	* src/gsad.c (init_validator): Add edit_task and save_task commands.