@@ -1,5 +1,15 @@
 2010-03-30  Matthew Mundell <matthew.mundell@intevation.de>
 
+	* src/gsad_omp.c (xsl_transform_omp): Add TIME to ENVELOPE.
+
+	* src/gsad_oap.c (xsl_transform_oap): Add TIME to ENVELOPE.
+
+	* src/html/src/gsad.xsl (html-gsa-logo): Add time under logout.
+	(time): New template.
+	(envelope): Pass time to html-gsa-logo.
+
+2010-03-30  Matthew Mundell <matthew.mundell@intevation.de>
+
 	* src/gsad.c (exec_omp_get): Add NULL guard for duration.
 
 2010-03-29  Matthew Mundell <matthew.mundell@intevation.de>
